<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="UpdateListBinding">

        <variable
            name="checkEntry"
            type="com.example.checkbud.data.CheckEntry" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/info_date_et"
            style="@style/text_info"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:hint="2018/01/01"
            android:text="@{checkEntry.date}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2018/01/01" />

        <TextView
            android:id="@+id/info_date_label_tv"
            style="@style/text_label"
            app:layout_constraintBottom_toBottomOf="@id/info_date_et"
            app:layout_constraintEnd_toEndOf="@id/info_date_et"
            app:layout_constraintTop_toBottomOf="@id/info_date_et"
            tools:text="@string/date" />

        <EditText
            android:id="@+id/info_invalid_et"
            style="@style/text_info"
            android:hint="50"
            android:inputType="number"
            android:text="@{String.valueOf(checkEntry.invalid)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/info_note_et"
            app:layout_constraintTop_toTopOf="@id/info_note_et"
            tools:text="50" />

        <EditText
            android:id="@+id/info_note_et"
            style="@style/text_info"
            android:hint="25"
            android:inputType="number"
            android:text="@{String.valueOf(checkEntry.note)}"
            app:layout_constraintEnd_toStartOf="@id/info_invalid_et"
            app:layout_constraintStart_toEndOf="@id/info_valid_et"
            app:layout_constraintTop_toTopOf="@id/info_valid_et"
            tools:text="25" />

        <EditText
            android:id="@+id/info_valid_et"
            style="@style/text_info"
            android:hint="05"
            android:inputType="number"
            android:text="@{String.valueOf(checkEntry.valid)}"
            app:layout_constraintBottom_toBottomOf="@+id/info_date_et"
            app:layout_constraintEnd_toStartOf="@id/info_note_et"
            app:layout_constraintStart_toEndOf="@+id/info_date_et"
            tools:text="05" />

        <ImageView
            android:id="@+id/info_invalid_iv"
            style="@style/info_image"
            android:background="@drawable/round_border"
            android:contentDescription="@string/invalid_symbol"
            app:layout_constraintBottom_toBottomOf="@id/info_invalid_et"
            app:layout_constraintEnd_toEndOf="@id/info_invalid_et"
            app:layout_constraintTop_toBottomOf="@id/info_invalid_et"
            app:srcCompat="@drawable/ic_clear" />

        <ImageView
            android:id="@+id/info_note_iv"
            style="@style/info_image"
            android:background="@drawable/round_border"
            android:contentDescription="@string/note_symbol"
            app:layout_constraintBottom_toBottomOf="@id/info_note_et"
            app:layout_constraintEnd_toEndOf="@id/info_note_et"
            app:layout_constraintTop_toBottomOf="@id/info_note_et"
            app:srcCompat="@drawable/ic_create" />

        <ImageView
            android:id="@+id/info_valid_iv"
            style="@style/info_image"
            android:background="@drawable/round_border"
            android:contentDescription="@string/valid_symbol"
            app:layout_constraintBottom_toBottomOf="@id/info_valid_et"
            app:layout_constraintEnd_toEndOf="@id/info_valid_et"
            app:layout_constraintTop_toBottomOf="@id/info_valid_et"
            app:srcCompat="@drawable/ic_check" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>